@@ -13,6 +13,8 @@ import com.onthegomap.planetiler.expression.DataType;
 import com.onthegomap.planetiler.reader.SourceFeature;
 import com.onthegomap.planetiler.reader.WithGeometryType;
 import com.onthegomap.planetiler.reader.WithTags;
+import com.onthegomap.planetiler.reader.osm.OsmElement;
+import com.onthegomap.planetiler.reader.osm.OsmSourceFeature;
 import com.onthegomap.planetiler.util.Try;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -340,6 +342,11 @@ public class Contexts {
     private static final String FEATURE_ID = "feature.id";
     private static final String FEATURE_SOURCE = "feature.source";
     private static final String FEATURE_SOURCE_LAYER = "feature.source_layer";
+    private static final String FEATURE_OSM_CHANGESET = "feature.osm_changeset";
+    private static final String FEATURE_OSM_VERSION = "feature.osm_version";
+    private static final String FEATURE_OSM_TIMESTAMP = "feature.osm_timestamp";
+    private static final String FEATURE_OSM_USER_ID = "feature.osm_user_id";
+    private static final String FEATURE_OSM_USER_NAME = "feature.osm_user_name";
 
     public static ScriptEnvironment<ProcessFeature> description(Root root) {
       return root.description()
@@ -348,7 +355,12 @@ public class Contexts {
           Decls.newVar(FEATURE_TAGS, Decls.newMapType(Decls.String, Decls.Any)),
           Decls.newVar(FEATURE_ID, Decls.Int),
           Decls.newVar(FEATURE_SOURCE, Decls.String),
-          Decls.newVar(FEATURE_SOURCE_LAYER, Decls.String)
+          Decls.newVar(FEATURE_SOURCE_LAYER, Decls.String),
+          Decls.newVar(FEATURE_OSM_CHANGESET, Decls.Int),
+          Decls.newVar(FEATURE_OSM_VERSION, Decls.Int),
+          Decls.newVar(FEATURE_OSM_TIMESTAMP, Decls.Int),
+          Decls.newVar(FEATURE_OSM_USER_ID, Decls.Int),
+          Decls.newVar(FEATURE_OSM_USER_NAME, Decls.String)
         );
     }
 
@@ -360,7 +372,17 @@ public class Contexts {
           case FEATURE_ID -> feature.id();
           case FEATURE_SOURCE -> feature.getSource();
           case FEATURE_SOURCE_LAYER -> wrapNullable(feature.getSourceLayer());
-          default -> null;
+          default -> {
+            OsmElement.Info info = feature instanceof OsmSourceFeature osm ? osm.originalElement().info() : null;
+            yield info == null ? null : switch (key) {
+              case FEATURE_OSM_CHANGESET -> info.changeset();
+              case FEATURE_OSM_VERSION -> info.version();
+              case FEATURE_OSM_TIMESTAMP -> info.timestamp();
+              case FEATURE_OSM_USER_ID -> info.userId();
+              case FEATURE_OSM_USER_NAME -> wrapNullable(info.user());
+              default -> null;
+            };
+          }
         };
       } else {
         return null;
@@ -410,7 +432,7 @@ public class Contexts {
     }
 
     public String matchKey() {
-      return matchKeys().isEmpty() ? null : matchKeys().get(0);
+      return matchKeys().isEmpty() ? null : matchKeys().getFirst();
     }
 
     public Object matchValue() {
